Fixed a file type spacing issue on landing page.

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -52,6 +52,9 @@
 }
 
 .file-types-lists {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     color: white;
 }
 
